Fix asserts when in debug mode

BUG: 389006